2005-09-16 Scott Dattalo <scott@dattalo.com>
	* gui/gui.h, gui/gui_main.cc, gui/gui_regwin.cc, gui/gui_regwin.h,
	gui/gui_watch.cc, gui/gui_watch.h:
	Added color info to the watch window.
	Watch window columns are now adjustable.
	Centralized color processing.

2005-09-15 Scott Dattalo <scott@dattalo.com>
	* gui/gui_main.cc, gui/gui_watch.cc, gui/gui_watch.h: The state of
	the watch window is now preserved from one debug session to the
	next.
	
2005-09-14 Scott Dattalo <scott@dattalo.com>
	* gui/gui_src.h, gui/gui_src_asm.cc, src/breakpoints.cc,
	src/breakpoints.h, src/pic-instructions.cc,
	src/pic-instructions.h, src/processor.cc, src/trace.cc:
	Fixed usability issues with setting breakpoints through the source
	browser. The 'Drag Break' feature has been disabled since it
	really doesn't work too well for assertions (or at least doesn't
	apply). Fixed a bug that prevented toggling breaks that occur at
	the current PC. 
	A new class was added to better handle the breakpoint
	classes. This new class, AliasedInstruction, is a base for the
	breakpoint class and basically will provide an API to handle
	aliased or replace instructions. 

2005-09-11 Scott Dattalo <scott@dattalo.com>
	* plat/win32/gpsim.def: updated for API changes.

2005-09-11 Scott Dattalo <scott@dattalo.com>
	* src/ioports.cc, src/ioports.h, src/stimuli.cc, src/stimuli.h,
	src/value.cc, gui/gui_breadboard.cc, gui/gui_breadboard.h:
	Attributes can now be updated through the breadboard. Pin states
	can now be updated through the breadboard.


2005-09-10 J.R. Heisey <jrheisey@sourceforge.com>
	* src/cmd_gpsim.h, cli/ui_gpsim.cc: Modified one of the
	FormatProgramAddress() functions in IUserInterface and
	CGpsimUserInterface.

2005-09-09 Scott Dattalo <scott@dattalo.com>
	* src/cod.cc: delete_directory() incorrectly deleted memory.

2005-09-08 J.R. Heisey <jrheisey@sourceforge.com>
	* configure.ac, plat/win32/gpsim.nsi: bump build number

	* gui/gui_src_asm.cc, src/value.cc: Fixed crashes when