@@ -68,6 +68,7 @@ public:
 
   virtual INSTRUCTION_TYPES isa(void) {return BREAKPOINT_INSTRUCTION;};
   virtual void execute(void);
+  virtual bool isBase() { return false;}
   virtual bool eval_Expression();
 };
 
